refactor(backend/listing): refactor listing create/update logic refactor(backend/trade): refactor trade preference create/update logic fix(backend/image): fix business entity vs external api entity image creation issue refactor(frontend/listing): combine create/edit pages into single modular listing form
	modified:   backend/Vinyl/infrastructure/docker/docker-compose.yml
	modified:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/controller/ListingController.java
	new file:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/domain/PaymentDirection.java
	modified:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/domain/entity/TradePreference.java
	new file:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/dto/CreateListingRequest.java
	modified:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/dto/ListingDTO.java
	modified:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/dto/TradePreferenceDTO.java
	new file:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/dto/TradePreferenceRequest.java
	new file:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/dto/UpdateListingRequest.java
	modified:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/exception/GlobalExceptionHandler.java
	new file:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/exception/ImageUploadException.java
	new file:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/exception/ListingCreationException.java
	new file:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/mapper/ListingMapper.java
	modified:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/repository/ListingRepository.java
	modified:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/security/config/SecurityConfig.java
	modified:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/service/CoverArtService.java
	modified:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/service/FileStorageService.java
	modified:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/service/List